GNOME Bugzilla – Bug 125361
Printing from Page setup fails
Last modified: 2004-12-22 21:47:04 UTC
Hey all, When I print from Page Setup, it fails with: ** (gnumeric:3295): CRITICAL **: file print.c: line 1223 (sheet_print): assertion `IS_SHEET (sheet)' failed and the dialog closes, however if I open print preview and print from there, it works. 1) new gnumeric 2) b4 gets "hello" 3) Page Setup 4) click on the print button --> in gdb, the assertion shows up, dialog closes if, 4) click on print preview 5) click on print icon -> print is fine, dialog closes. wierdnesses and funnineessssessses, --adrian
hmm, probably a bad idea to free a structure first and then access its members. Fixed.