http://bugzilla.gnome.org/show_bug.cgi?id=125361 cb_do_print_ok causes

2003-10-26  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=125361
	* dialog-printer-setup.c (cb_do_print): cb_do_print_ok causes
	  state to be freed. So don't use it afterwards.